# multi_rounds_safearena

./: .gitignore  README.md  README_USER_REQUEST.md  count_rounds.py  dedup.py  genericagent-gpt-4o-mini-2024-07-18-on-safearena-multi-round_results.json  harm_decompose.py  multi_round_system.txt  process_tasks.py  pyproject.toml  read_rounds.py  requirements.txt  run.sh  safe_decompose.py  test_batch.py  test_multi_round.sh  test_user_request.py  test_user_request_integration.py
apps/: agent_xray.py
env-setup/: 00_vars.sh  00cf_vars.sh  01_docker_load_images.sh  02_docker_remove_containers.sh  03_docker_create_containers.sh  04_docker_start_containers.sh  05_docker_patch_containers.sh  06_serve_homepage.sh  07_serve_reset.sh  README.md  create_and_run_tunnel.sh  openstreetmap_docker-compose.template.yml
env-setup/homepage/templates/: index.backup
env-setup/reset_server/: reset.sh  server.py
safearena/: __init__.py  config.py  custom_action_set.py  custom_actions.py  custom_prompts.py  enhanced_generic_agent.py  harmful_agent.py  modeling.py  multi_round_env copy.py  multi_round_env.py  multi_round_task.py  refusal_analysis.py  register.py  simple_benchmark.py  task.py
safearena/helper/: evaluators.py  helper.py  trajectories.py
scripts/: launch_experiment.py  launch_experiment.py.bak
utils/: overlap.py
vars/: harm-cf.sh  safe-cf.sh
